# FYS4411

Project 2/: README.md  pyproject.toml
Project 2/doc/: ref.bib
Project 2/src/: main.py  visualizations.py
Project 2/src/utils/: config.py  hamiltonian_helper.py  optimizer.py  sampler.py  some_utils.py  variational_state.py
